bitcoin_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitcoin-app
spec:
  selector:
    app: bitcoin-app
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-app
spec:
  selector:
    matchLabels:
      app: bitcoin-app
  replicas: 1
  template:
    metadata:
      labels:
        app: bitcoin-app
    spec:
      containers:
      - name: bitcoin-app
        image: rimakh/bitcoin_app:latest
        ports:
        - containerPort: 80
